                                   __
                       _ __ ___   / _|  ___  _ __ ___
                      | '_ ` _ \ | |_  / _ \| '_ ` _ \
                      | | | | | ||  _||  __/| | | | | |
                      |_| |_| |_||_|   \___||_| |_| |_|

                               http://mfem.org


Version 3.4.1 (development)
===========================

- Added support for wedge shaped mesh elements of arbitrary order (with Geometry
  type PRISM) which have two triangular faces and three quadrilateral faces.
  Several examples of such meshes can be found in the data/ directory.

- Added H1 and L2 finite elements of arbitrary order for Wedge elements.

- Added support for mixed meshes containing triangles and quadrilaterals in 2D
  or tetrahedra, wedges, and hexahedra in 3D. This includes support for uniform
  refinement of such meshes. Several examples of such meshes can be found in the
  data/ directory.

- Added the capability to produce 3D meshes by extruding 2D meshes, see the new
  miniapp, Extruder, in the miniapps/meshing directory.

- Added a new meshing miniapp, Toroid, which can produce a variety of torus
  shaped meshes by twisting a stack of wedges or hexahedra.

- Improved the uniform refinement of tetrahedral meshes (also part of the
  uniform refinement of mixed 3D meshes). The previous refinement algorithm is
  still available as an option in Mesh::UniformRefinement. Both can be used in
  the updated Mesh Explorer miniapp.

- Added support for reading and writting linear and quadratic meshes containing
  wedge elements in VTK mesh format. Several examples of such meshes can be
  found in the data/ directory.

- Added support for reading linear and quadratic 2D quadrilateral and triangular
  Cubit meshes.

- The local tetrahedral mesh refinement algorithm in serial and in parallel now
  follows precisely the paper:

     D. Arnold, A. Mukherjee, and L. Pouly, "Locally Adapted Tetrahedral Meshes